<resources>
    <string name="title_active_login">Clinica Europa Login</string>
    <string name="password">Contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Contraseña actual</string>
    <string name="name">Nombre completo</string>
    <string name="email">Email</string>
    <string name="login">Registrarse</string>
    <string name="repeat_password">Confirma la contraseña</string>
    <string name="signup">Registrarse</string>
    <string name="text_signup">No tienes cuenta?</string>
    <string name="link_signup">Iniciar sesion</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">Usuario</string>
    <string name="update_profile">Guardar</string>
    <string name="main_manu">Menu principal</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="forget_password">¿olvidaste tu contraseña?</string>
    <string name="title_check_email">Verificacion de Email</string>
    <string name="subtitle_check_email">Para completar su registro. ¡Por favor! verifica su correo y después de clic en continuar.</string>
    <string name="continue_check_email">Continuar</string>
    <string name="title_account_recovery">Recuperación de la cuenta</string>
    <string name="subtitle_account_recovery">Ingresa tu email para que se te pueda enviar un correo con los pasos para cambiar tu contraseña.</string>
    <string name="recovery_account">Enviar</string>
    <string name="title_update_password">Cambio de contraseña</string>
    <string name="subtitle_update_password">Por motivos de seguridad para cambiar tu contraseña, primero debes ingresar tu contraseña actual.</string>
    <string name="title_delete_account">Eliminar cuenta</string>
    <string name="subtitle_delete_account">Por motivos de seguridad para eliminar tu cuenta por completo, debes de ingresar tu contraseña.</string>
    <string name="delete">Eliminar</string>

    <string name="app_name">Proyecto Movil</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btn_pocision">Este boton pide permisos</string>
    <string name="info_description">Imagen de un edificio</string>
    <string name="new_marker">Creaste un nuevo marker</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="alert_dialog_title">Desea habilitar el GPS?</string>
    <string name="alert_dialog_description">Esta aplicación necesita utilizar el servicio de GPS. Vaya a hailitarlo.</string>
    <string name="alert_dialog_button_accept">Habilitar</string>
    <string name="alert_dialog_button_denny">Ignorar</string>
    <string name="btn_map">Botón para el mapa</string>
    <string name="txt_fullName">Nombre completo</string>
    <string name="txt_save">Guardar</string>
    <string name="txt_Materias">Materias favoritas</string>
    <string name="txt_valoracion">Valoración</string>
    <string name="btn_position">Hbailitará mi ubicación</string>
    <string name="btn_normal">Normal</string>
    <string name="btn_none">N/A</string>
    <string name="btn_terreno">Terreno</string>
    <string name="btn_satelital">Satelital</string>
    <string name="btn_hibrido">Híbrido</string>
    <string name="new_marker_random">Nueva ubicación Random</string>
    <string name="Img_infoWindow_des">Imagen de un edificio</string>
    <string name="txt_maps">Botón para ir al mapa</string>
    <string name="txt_permission_map">Botón para habilitar permisos de google maps</string>
    <string name="todo">TODO</string>
    <string name="btn_habilitar_gps">Habilitar GPS</string>
    <string name="btn_habilitar_coordenadas">Captar coordenadas</string>
    <string name="btn_recorrido">Recorrido</string>
    <string name="splash_title">Clinica Dental</string>
    <string name="image_description">Imagen de pantalla de carga</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion del menu</string>

    <string name="map_gps">Clinica europa</string>
    <string name="menu_home">Menu Home</string>
    <string name="nav_home">Menu principal</string>
    <string name="logout_app">Cerrar sesion</string>
    <string name="configuration_profile">Configurar perfil</string>
    <string name="menu_radiografias">Ver radiografias</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_citas">Ver citas</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="buscar">Buscar</string>

    //Activity Citas
    <string name="btn_Registrar">Registrar</string>
    <string name="fecha_cita_campo">Fecha de cita</string>
    <string name="hora_Iniciocita_campo">Seleccione la hora de su cita</string>
    <string name="hora_Finalcita_campo">Hora final cita</string>
    <string name="motivo_campo">Motivo de cita</string>
    <string name="estado_campo">Estado de cita</string>
    <string name="titulo_activity">Agenda tu cita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    //HARDCODE
    <string name="fecha_cita">Fecha cita:</string>
    <string name="hora_cita">Hora cita:</string>
    <string name="motivo_cita">Motivo cita:</string>
    <string name="example">example</string>

</resources>