<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_32"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/mapsActivity"
            android:icon="@drawable/ic_baseline_gps_32"
            android:title="@string/map_gps" />
        <item
            android:id="@+id/mainActivity"
            android:icon="@drawable/ic_settings_32"
            android:title="@string/configuration_profile" />
<!--        <item-->
<!--            android:id="@+id/logout"-->
<!--            android:icon="@drawable/ic_sign_out"-->
<!--            android:title="@string/logout_app" />-->
    </group>
</menu>